[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slikemedia"
version = "0.1.0"
description = "Python SDK for publishing media on Slike platform"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["slike", "media", "publishing", "api", "sdk"]
authors = [
    { name = "Arpit Kumar" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/slikemedia"
Documentation = "https://github.com/yourusername/slikemedia#readme"
Repository = "https://github.com/yourusername/slikemedia"
Issues = "https://github.com/yourusername/slikemedia/issues"

[tool.hatch.build.targets.wheel]
packages = ["slikemedia.py"]

[tool.hatch.build.targets.sdist]
include = [
    "slikemedia.py",
    "README.md",
    "LICENSE",
]

